[gd_scene load_steps=20 format=2]

[ext_resource path="res://manager/interface/InterfaceLogoManager.gd" type="Script" id=1]
[ext_resource path="res://interface/norse/img/background-black.png" type="Texture" id=2]
[ext_resource path="res://interface/norse/tile/TilesHUB.tres" type="TileSet" id=3]
[ext_resource path="res://interface/norse/img/logo/Logo_Chatora_00.png" type="Texture" id=4]
[ext_resource path="res://interface/norse/img/logo/Logo_Chatora_01.png" type="Texture" id=5]
[ext_resource path="res://interface/norse/img/logo/Logo_Chatora_02.png" type="Texture" id=6]
[ext_resource path="res://interface/norse/img/logo/Logo_Chatora_03.png" type="Texture" id=7]
[ext_resource path="res://interface/norse/img/logo/Logo_Chatora_04.png" type="Texture" id=8]
[ext_resource path="res://interface/norse/img/logo/Logo_Chatora_05.png" type="Texture" id=9]
[ext_resource path="res://interface/norse/img/logo/Logo_Chatora_06.png" type="Texture" id=10]
[ext_resource path="res://interface/norse/img/logo/Logo_Chatora_07.png" type="Texture" id=11]
[ext_resource path="res://interface/norse/img/logo/Logo_Chatora_08.png" type="Texture" id=12]
[ext_resource path="res://interface/norse/img/logo/Logo_Chatora_09.png" type="Texture" id=13]
[ext_resource path="res://interface/norse/img/logo/Logo_Chatora_10.png" type="Texture" id=14]
[ext_resource path="res://interface/norse/img/logo/Logo_Chatora_11.png" type="Texture" id=15]
[ext_resource path="res://interface/norse/font/Pixeled.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://sound/Purr.ogg" type="AudioStream" id=17]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "stand",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 26
outline_size = 2
outline_color = Color( 0.6, 0.580392, 0.580392, 1 )
font_data = ExtResource( 16 )

[node name="LogoInterface" type="Node2D"]
script = ExtResource( 1 )

[node name="Layer 0 - Background" type="CanvasLayer" parent="."]
editor/display_folded = true
layer = -3

[node name="TextureRect" type="TextureRect" parent="Layer 0 - Background"]
modulate = Color( 1, 1, 1, 0 )
margin_top = -3.0
margin_right = 1024.0
margin_bottom = 597.0
texture = ExtResource( 2 )

[node name="Layer 1 - Border" type="CanvasLayer" parent="."]
editor/display_folded = true
layer = -2

[node name="TileMap" type="TileMap" parent="Layer 1 - Border"]
visible = false
position = Vector2( 10, 5 )
tile_set = ExtResource( 3 )
cell_size = Vector2( 84, 84 )
format = 1
tile_data = PoolIntArray( 0, -1073741821, 0, 1, -1073741820, 0, 2, -1073741820, 0, 3, -1073741820, 0, 4, -1073741820, 0, 5, -1073741820, 0, 6, -1073741820, 0, 7, -1073741820, 0, 8, -1073741820, 0, 9, -1073741820, 0, 10, -1073741820, 0, 11, 3, 0, 65536, 1610612740, 0, 65547, 4, 0, 131072, 1610612740, 0, 131083, 4, 0, 196608, 1610612740, 0, 196619, 4, 0, 262144, 1610612740, 0, 262155, 4, 0, 327680, 1610612740, 0, 327691, 4, 0, 393216, 1610612739, 0, 393217, -1610612732, 0, 393218, -1610612732, 0, 393219, -1610612732, 0, 393220, -1610612732, 0, 393221, -1610612732, 0, 393222, -1610612732, 0, 393223, -1610612732, 0, 393224, -1610612732, 0, 393225, -1610612732, 0, 393226, -1610612732, 0, 393227, -1610612733, 0 )

[node name="Layer 2 - GUI" type="CanvasLayer" parent="."]
editor/display_folded = true

[node name="Logo" type="AnimatedSprite" parent="Layer 2 - GUI"]
position = Vector2( 507, 224 )
frames = SubResource( 1 )
animation = "idle"

[node name="Label" type="Label" parent="Layer 2 - GUI"]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -23.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Chatora Games"
align = 1

[node name="Tween" type="Tween" parent="."]

[node name="Tween2" type="Tween" parent="."]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
mix_target = 2

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="finished" from="Music" to="." method="_on_Music_finished"]
